# ot-asset-classifier

./: LICENSE  README.md  pyproject.toml
examples/: classify_site_assets.py
ot_classifier/: __init__.py  classifier.py  risk.py
tests/: test_classifier.py
