[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ot-asset-classifier"
version = "1.0.0"
description = "Deterministic IEC 62443-aligned OT asset classification and risk scoring"
readme = "README.md"
licence = {text = "MIT"}
authors = [{name = "Suresh Dakha", email = "dakhasuresh@gmail.com"}]
keywords = [
    "OT security", "IEC 62443", "SCADA", "industrial cybersecurity",
    "Purdue Model", "risk scoring", "asset classification", "ICS"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Manufacturing",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
    "Licence :: OSI Approved :: MIT Licence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/suresh-dakha/ot-asset-classifier"
Repository = "https://github.com/suresh-dakha/ot-asset-classifier"
Issues = "https://github.com/suresh-dakha/ot-asset-classifier/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
